@@ -5,8 +5,9 @@
 #              cvs loginfo producer
 #
 # File:        $Source: /home/d/work/personal/ticker-cvs/cvs2ticker/cvs2ticker.py,v $
-# Version:     $RCSfile: cvs2ticker.py,v $ $Revision: 1.32 $
-# Copyright:   (C) 1998-2002, David Leonard, Bill Segall & David Arnold.
+# Version:     $RCSfile: cvs2ticker.py,v $ $Revision: 1.33 $
+# Copyright:   (C) 1998-1999 David Leonard.
+# Copyright:   (C) 1999-2003 Bill Segall, David Arnold and Ian Lister.
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -29,7 +30,7 @@ cvs2ticker - pass CVS loginfo messages through to tickertape
 
 """
 __author__ = 'David Leonard <david.leonard@dstc.edu.au>'
-__version__ = "$Revision: 1.32 $"[11:-2]
+__version__ = "$Revision: 1.33 $"[11:-2]
 
 
 ########################################################################
@@ -234,6 +235,17 @@ def log_to_ticker(ticker_group, repository, rep_dir, bastard):
                      'MIME_TYPE':   "x-elvin/url",
                      'MIME_ARGS':   str_url,
                      'Message-Id':  str(random.randint(1, 0x7ffffff))})
+
+    #-- add v3 tickertape attributes
+    d_notify.update({'Timeout': d_notify('TIMEOUT'),
+                     'Message': d_notify('TICKERTEXT'),
+                     'Group': d_notify('TICKERTAPE'),
+                     'From': d_notify('USER')})
+
+    d_notify['Attachment'] = 'MIME-Version: 1.0\r\n' \
+                             'Content-Type: text/uri-list\r\n' \
+                             '\r\n' \
+                             '%s\r\n' % str_url})
     return d_notify
 
 
